--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,27 @@
+*{
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
+    max-width:100%;
+    border:1px solid grey;
+}
+html{
+    font-size:62.5%;
+}
 body{
-    background-color: greenyellow;
+    font-size: 1.8rem;
+    font-family: monospace;
+}
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+h2, nav{
+    width:44%;
 }
