--- a/style/index.css
+++ b/style/index.css
@@ -3,7 +3,7 @@
     padding:0;
     margin:0;
     max-width:100%;
-    border:1px solid grey;
+    /* border:1px solid grey; */
 }
 html{
     font-size:62.5%;
@@ -12,16 +12,54 @@ body{
     font-size: 1.8rem;
     font-family: monospace;
 }
-header{
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+
+.top{
     display: flex;
     justify-content: center;
-    align-items: center;
 }
-.container{
+.image{
+    background-image: url("https://picsum.photos/600/400");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    font-size: 2rem;
+    width: 600px;
+    height: 400px;
+}
+footer{
+    background-color: lightgray;
+    padding:20px;
+    text-align: center;
+
+}
+.row, .row2{
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
-    flex-wrap: wrap;
+    padding: 20px;
 }
-h2, nav{
-    width:44%;
+.port{
+    text-align: center;
+}
+button{
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    padding: 5px 10px;
+    transition: 2s;
+
+}
+button:hover{
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+
+}
+button a{
+    text-decoration: none;
+    color: inherit;
 }
