--- a/style/index.css
+++ b/style/index.css
@@ -11,6 +11,8 @@ html{
 body{
     font-size: 1.8rem;
     font-family: monospace;
+    background-color:pink;
+    color: purple;
 }
 nav{
     display: flex;
@@ -25,15 +27,30 @@ nav{
     background-image: url("https://picsum.photos/600/400");
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
+    color: purple;
     font-size: 2rem;
     width: 600px;
     height: 400px;
 }
 footer{
-    background-color: lightgray;
+    background-color: rebeccapurple;
     padding:20px;
     text-align: center;
+
+}
+button footer{
+    background-color: pink;
+    color: rebeccapurple;
+    border: 1px solid rebeccapurple;
+    padding: 5px 10px;
+    transition: 2s;
+
+}
+button footer:hover{
+    background-color: rebeccapurple;
+    color: pink;
+    border: 1px solid pink;
+
 
 }
 .row, .row2{
@@ -46,17 +63,17 @@ footer{
     text-align: center;
 }
 button{
-    background-color: white;
-    color: black;
-    border: 1px solid black;
+    background-color: rebeccapurple;
+    color: white;
+    border: 1px solid white;
     padding: 5px 10px;
     transition: 2s;
 
 }
 button:hover{
-    background-color: black;
-    color: white;
-    border: 1px solid white;
+    background-color: white;
+    color: rebeccapurple;
+    border: 1px solid rebeccapurple;
 
 }
 button a{
