--- a/style/index.css
+++ b/style/index.css
@@ -83,6 +83,18 @@ button a{
     color: inherit;
 }
 
-@media{
-    
+@media(max-width:800px){
+    .image{
+        width: 80%;
+    }
+    .button{
+        padding: 2px 8px;
+    }
+    body{
+        font-size:1.5rem;
+    }
+    .port{
+        padding: 2%;
+    }
+
 }
