--- a/style/index.css
+++ b/style/index.css
@@ -98,3 +98,19 @@ button a{
     }
 
 }
+@media(max-width:500px){
+    .body{
+        font-size: 1rem;
+    }
+    .image{
+        height: 100vh;
+        width: 100%;
+
+    }
+    .row, .row2{
+        flex-wrap: wrap;
+        width: 100%;
+        
+    }
+    
+}
